[gd_scene load_steps=2 format=3 uid="uid://bxorft57mvw0y"]

[ext_resource type="Script" path="res://Scenes/Menus/main_menu.gd" id="1_phoh1"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_phoh1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_right = 105.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Untitled_"
horizontal_alignment = 1

[node name="start_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START GAME"

[node name="options_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="exit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "EXIT"

[connection signal="button_up" from="VBoxContainer/start_button" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="VBoxContainer/options_button" to="." method="_on_options_button_button_up"]
[connection signal="pressed" from="VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
